--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "homepage": "https://drew-sant.github.io",
+  "scripts":{
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
   "devDependencies": {
     "gh-pages": "^6.1.1"
   }
